@@ -11,6 +11,8 @@
  * Add view rspec button to jacks app (#1202)
  * "Delete All" clears the Rspec and Reserve Resources button in Jacks Editor App (slice-add-resource-jacks) (#1191)
  * Fix map view to remove nodes with no lat/long info (#1240)
+ # Fix handling of delete race-condition (delete returns before manifest 
+    shows deletion) in jacks-app.js (#1241)
 
 == 2.22 ==
  * Include link to NYU Poly WITest wireless site. (#773)
